# whisper.cpp

./: .gitignore
bindings/python/: build_stargate_whispercpp_binding.sh  setup.py  stargate_whispercpp_binding.cpp
bindings/python/stargate_whispercpp_binding/: __init__.py
examples/: CMakeLists.txt
examples/cli/: cli.cpp
examples/kenlm-callback/: CMakeLists.txt  kenlm-callback.cpp
scripts/: benchmark_stargate_kenlm_wer.py  build-stargate-extras.sh  run_stargate_kenlm_callback.sh
